Tue Apr  5 21:53:55 CET 2005	Michael Neumann <mneumann@ntecs.>

	* lib/wee/renderer/html/canvas.rb, lib/wee/renderer/html/brushes.rb,
	  examples/radio.rb: Added support for radio buttons.
	  (methods r.new_radio_group and r.radio_button)

--------------------------------------------------------------------
TAGGED 0.8.0
--------------------------------------------------------------------

Mon Apr  4 18:45:28 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* examples/ajax/ajax.rb, examples/ajax/ajax.js,
	lib/wee/core/presenter.rb, lib/wee/renderer/html/brushes.rb: Added minimal
	Ajax update support.

Mon Apr  4 14:32:34 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/abstractsession.rb, lib/wee/session.rb,
	  lib/wee/pageless/session.rb, examples/live-update.rb: refactored
	  Session classes.

	* lib/wee/core/presenter.rb: added send_response method, to send a
	  premature response.

Mon Apr  4 13:03:08 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/pageless/session.rb, lib/wee/pageless/application.rb: Remove
	  dependency of WEBrick::Cookie, use CGI::Cookie instead.

	* lib/wee/adaptors/fastcgi.rb: Added preliminary FastCGI adaptor
	  (does not work yet with Pageless applications).

	* lib/wee/adaptors/webrick.rb: reordered line

Sun Apr  3 13:24:04 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/adaptors/webrick.rb: doc fix

Sun Apr  3 13:11:07 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/core/presenter.rb, lib/wee/core/component.rb, 
	  lib/wee/core/decoration.rb, lib/wee/session.rb, 
	  lib/wee/pageless/session.rb, examples/window.rb, README:
	  Fixed a bug in processing the callbacks. It was not guaranteed that
	  all input callbacks are invoked before the final action callback.
	  This is now guaranteed! I've introduced two separate tree traversals
	  of process_callbacks to make this work. As a side effect, this also
	  has removed the dependency of Presenter/Component/Decoration classes